prompt overview day1 study

--- a/all_prompt_engineering_techniques/instruction-engineering-notebook.ipynb
+++ b/all_prompt_engineering_techniques/instruction-engineering-notebook.ipynb
@@ -52,7 +52,27 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\shuai\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'langchain.prompts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_openai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ChatOpenAI\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mprompts\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PromptTemplate\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[32m      6\u001b[39m load_dotenv()\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'langchain.prompts'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from langchain_openai import ChatOpenAI\n",
@@ -137,53 +157,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bullet Structure Output:\n",
-      "### Photosynthesis\n",
-      "\n",
-      "**Definition:**  \n",
-      "Photosynthesis is the biochemical process by which green plants, algae, and some bacteria convert light energy, usually from the sun, into chemical energy in the form of glucose, using carbon dioxide and water.\n",
-      "\n",
-      "**Main Components Involved:**  \n",
-      "1. **Light Energy** (usually sunlight)\n",
-      "2. **Chlorophyll** (pigment in chloroplasts)\n",
-      "3. **Water (H₂O)**\n",
-      "4. **Carbon Dioxide (CO₂)**\n",
-      "5. **Glucose (C₆H₁₂O₆)**\n",
-      "6. **Oxygen (O₂)**\n",
-      "\n",
-      "**Steps of Photosynthesis:**\n",
-      "1. **Light Absorption:** Chlorophyll absorbs sunlight, primarily in the blue and red wavelengths.\n",
-      "2. **Water Splitting (Photolysis):** The absorbed light energy splits water molecules into oxygen, protons, and electrons.\n",
-      "3. **Oxygen Release:** Oxygen is released as a byproduct into the atmosphere.\n",
-      "4. **Energy Conversion:** The electrons move through the electron transport chain, creating ATP (adenosine triphosphate) and NADPH (nicotinamide adenine dinucleotide phosphate) from ADP and NADP⁺.\n",
-      "5. **Calvin Cycle:** In the stroma, ATP and NADPH are used to convert carbon dioxide into glucose through a series of reactions.\n",
-      "\n",
-      "**Importance for Life on Earth:**  \n",
-      "Photosynthesis is crucial for life on Earth as it produces oxygen, which is essential for the respiration of most living organisms. Additionally, it forms the base of the food chain, providing energy and organic compounds for plants, animals, and humans.\n",
-      "\n",
-      "Narrative Structure Output:\n",
-      "Photosynthesis is the process by which green plants, algae, and some bacteria convert light energy into chemical energy in the form of glucose, using carbon dioxide and water.\n",
-      "\n",
-      "Here's how it works, step-by-step:\n",
-      "\n",
-      "1. **Light Absorption**: Plants have a green pigment called chlorophyll, primarily found in chloroplasts, that captures sunlight. This light energy is essential for driving the photosynthesis process.\n",
-      "\n",
-      "2. **Water Uptake**: Roots absorb water (H₂O) from the soil and transport it to the leaves through specialized vessels known as xylem.\n",
-      "\n",
-      "3. **Carbon Dioxide Intake**: Plants take in carbon dioxide (CO₂) from the atmosphere through small openings in their leaves called stomata.\n",
-      "\n",
-      "4. **Light Reaction**: In the chloroplasts, the absorbed light energy splits water molecules into oxygen (O₂), protons, and electrons. This reaction releases oxygen as a byproduct, which is expelled into the atmosphere.\n",
-      "\n",
-      "5. **Calvin Cycle**: The electrons and energy produced in the light reaction are used in the Calvin Cycle to convert carbon dioxide and protons into glucose (C₆H₁₂O₆), a simple sugar that serves as an energy source for the plant.\n",
-      "\n",
-      "In summary, photosynthesis is crucial for life on Earth because it produces oxygen, which is vital for the survival of most living organisms, and it forms the base of the food chain by converting solar energy into a form that can be used by other organisms for energy. Without photosynthesis, life as we know it would not exist.\n"
+      "Bullet Structure Output:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_completion' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m      9\u001b[39m narrative_structure = \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[33mImagine you\u001b[39m\u001b[33m'\u001b[39m\u001b[33mre a botanist explaining photosynthesis to a curious student. \u001b[39m\n\u001b[32m     11\u001b[39m \u001b[33mStart with a simple definition, then walk through the process step-by-step, \u001b[39m\n\u001b[32m     12\u001b[39m \u001b[33mhighlighting the key components involved. Conclude by emphasizing why \u001b[39m\n\u001b[32m     13\u001b[39m \u001b[33mphotosynthesis is crucial for life on Earth. Write it concisely.\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mBullet Structure Output:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mget_completion\u001b[49m(bullet_structure))\n\u001b[32m     19\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mNarrative Structure Output:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     20\u001b[39m \u001b[38;5;28mprint\u001b[39m(get_completion(narrative_structure))\n",
+      "\u001b[31mNameError\u001b[39m: name 'get_completion' is not defined"
      ]
     }
    ],
@@ -452,7 +444,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -466,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
